--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <h1>My Tuesday Schedule</h1>
   <ol>
-    <li>Period 1 is AAAA </li>
-    <li>Period 2 is BBBB </li>
-    <li>Period 3 is CCCC </li>
-    <li>Period 4 is DDDD </li>  
-    <li>Period 5 is EEEE </li>  
-    <li>Period 6 is FFFF </li>  
-    <li>Period 7 is GGGG </li>  
-    <li>Period 8 is HHHH </li>  
-    <li>Period 9 is JJJJ </li>  
-    <li>Period 10 is KKKK </li>  
+    <li>Period 1 is chem </li>
+    <li>Period 2 is phyaic </li>
+    <li>Period 3 is lunch </li>
+    <li>Period 4 is math </li>  
+    <li>Period 5 is physcology </li>  
+    <li>Period 6 is tech </li>  
+    <li>Period 7 is tech </li>  
+    <li>Period 8 is tech </li>  
+    <li>Period 9 is ela </li>  
+    <li>Period 10 is social studies </li>  
   </ol>
 
   
